assets/css/style.css
/* ... */
html {
  position: relative;
  min-height: 100%;
}

.h1,
.h2,
.h3,
.h4,
.h5,
.h6,
h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Roboto", sans-serif;
}

p {
  line-height: 1.6;
}

* {
  outline: none !important;
}

a:hover {
  outline: 0;
  text-decoration: none;
}
a:active {
  outline: 0;
  text-decoration: none;
}
a:focus {
  outline: 0;
  text-decoration: none;
}

.container {
  width: auto;
}

.container-alt {
  margin-left: auto;
  margin-right: auto;
  padding-left: 15px;
  padding-right: 15px;
}

#wrapper {
  height: 100%;
  overflow: hidden;
  width: 100%;
}

/* =============
   Helper classes
============= */
.m-b-30 {
  margin-bottom: 30px;
}

.m-t-50 {
  margin-top: 50px;
}

@media (max-width: 767px) {
  .mt-md-30 {
    margin-top: 30px;
  }
}
.p-l-r-10 {
  padding-left: 10px;
  padding-right: 10px;
}

.w-xs {
  min-width: 80px;
}

.w-sm {
  min-width: 95px;
}

.w-md {
  min-width: 110px;
}

.w-lg {
  min-width: 140px;
}

.center-page {
  float: none !important;
  margin: 0 auto !important;
}

.text-overflow {
  text-overflow: ellipsis;
  white-space: nowrap;
  display: block;
  width: 100%;
  overflow: hidden;
}

.font-600 {
  font-weight: 600;
}

.font-bold {
  font-weight: 700;
}

.font-normal {
  font-weight: normal;
}

.font-light {
  font-weight: 300;
}

.font-13 {
  font-size: 13px !important;
}

.font-14 {
  font-size: 14px !important;
}

.font-15 {
  font-size: 15px !important;
}

.font-16 {
  font-size: 16px !important;
}

.font-18 {
  font-size: 18px !important;
}

.bx-shadow {
  box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.06), 0 1px 0 0 rgba(0, 0, 0, 0.02);
}

.bx-shadow-lg {
  box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.15), 0 1px 0 0 rgba(0, 0, 0, 0.1);
}

.bx-shadow-none {
  box-shadow: none !important;
}

.thumb-sm {
  height: 36px;
  width: 36px;
}

.thumb-md {
  height: 48px;
  width: 48px;
}

.thumb-lg {
  height: 88px;
  width: 88px;
}

.thumb-xl {
  height: 120px;
  width: 120px;
}

.slimScrollDiv {
  height: auto !important;
}

/* Table type box */
.table-box {
  display: table;
  height: 100%;
  width: 100%;
}
.table-box .table-detail {
  display: table-cell;
  vertical-align: middle;
}

/* Button demo */
.button-list {
  margin-left: -8px;
  margin-bottom: -12px;
}
.button-list .btn {
  margin-bottom: 12px;
  margin-left: 8px;
}

/* Demo only */
.icon-list-demo div {
  cursor: pointer;
  line-height: 45px;
  white-space: nowrap;
  text-overflow: ellipsis;
  display: block;
  overflow: hidden;
}
.icon-list-demo div p {
  margin-bottom: 0;
  line-height: inherit;
}
.icon-list-demo i {
  text-align: center;
  vertical-align: middle;
  font-size: 24px;
  width: 50px;
  height: 50px;
  line-height: 50px;
  margin-right: 12px;
  color: fade(#313a46, 70%);
  border-radius: 3px;
  display: inline-block;
  transition: all 0.2s;
}
.icon-list-demo [class^="pe-7s-"],
.icon-list-demo [class*=" pe-7s-"] {
  font-weight: 600;
}
.icon-list-demo .col-md-4 {
  -webkit-border-radius: 3px;
  border-radius: 3px;
  -moz-border-radius: 3px;
  background-clip: padding-box;
  margin-bottom: 10px;
}
.icon-list-demo .col-md-4:hover i {
  color: #ffffff;
  background: #b5b5b5;
  background: linear-gradient(to top, #b5b5b5, #000000);
  box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.15), 0 1px 0 0 rgba(0, 0, 0, 0.1);
}

/* =============
   Bootstrap-custom
============= */
.breadcrumb {
  background-color: transparent;
  margin-bottom: 15px;
  padding-top: 10px;
  padding-left: 0;
}
.breadcrumb a {
  color: #98a6ad;
}

.breadcrumb > li + li:before {
  padding: 0 5px;
  color: #ccc;
  content: "\f105" !important;
  font-family: FontAwesome;
}

/* Blockquote */
.blockquote {
  font-size: 1.1rem;
}

.media {
  margin-top: 25px;
}

/* Dropdown */
.dropdown-menu {
  padding: 4px 0;
  font-size: 15px;
  box-shadow: 0 3px 12px rgba(0, 0, 0, 0.05);
}

.dropdown-menu-animated {
  display: block;
  visibility: hidden;
  opacity: 0;
  transition: all 300ms ease;
  -moz-transition: all 300ms ease;
  -webkit-transition: all 300ms ease;
  -o-transition: all 300ms ease;
  -ms-transition: all 300ms ease;
  margin-top: 20px !important;
}

.show > .dropdown-menu {
  visibility: visible;
  opacity: 1;
  margin-top: 0 !important;
}

.dropdown-item.active,
.dropdown-item:active {
  color: #313a46;
  text-decoration: none;
  background-color: #e2e2e2;
}

.dropdown-item {
  padding: 6px 1.5rem;
}

.dropdown-lg {
  width: 260px;
}

.arrow-none:after {
  border: none;
  margin: 0;
  display: none;
}

/* Background colors */
.bg-custom {
  background-color: #000000 !important;
}

.bg-gradient {
  background: #b5b5b5;
  background: linear-gradient(to top, #b5b5b5, #000000);
}

.bg-primary {
  background-color: #b5b5b5 !important;
}

.bg-success {
  background-color: #3ec396 !important;
}

.bg-info {
  background-color: #4fbde9 !important;
}

.bg-warning {
  background-color: #f9bc0b !important;
}

.bg-danger {
  background-color: #f36270 !important;
}

.bg-muted {
  background-color: #797979 !important;
}

.bg-purple {
  background-color: #9368f3 !important;
}

.bg-pink {
  background-color: #e061c9 !important;
}

.bg-white {
  background-color: #ffffff !important;
}

.bg-dark {
  background-color: #313a46 !important;
}

/* Text colors */
.text-custom {
  color: #000000 !important;
}

.text-white {
  color: #ffffff !important;
}

.text-danger {
  color: #f36270 !important;
}

.text-muted {
  color: #98a6ad !important;
}

.text-primary {
  color: #b5b5b5 !important;
}

.text-warning {
  color: #f9bc0b !important;
}

.text-success {
  color: #3ec396 !important;
}

.text-info {
  color: #4fbde9 !important;
}

.text-pink {
  color: #e061c9 !important;
}

.text-purple {
  color: #9368f3 !important;
}

.text-dark {
  color: #313a46 !important;
}

/* Border colors */
.border-primary {
  border-color: #b5b5b5 !important;
}

.border-success {
  border-color: #b5b5b5 !important;
}

.border-info {
  border-color: #b5b5b5 !important;
}

.border-warning {
  border-color: #b5b5b5 !important;
}
/* ... */

